test/users/ferguson/proc-semi.good
proc-semi.chpl:1: error: no-op procedures are only legal for extern functions
