test/users/ferguson/proc-semi.chpl
proc myproc();
{
  writeln("Hello");
}

myproc();
